pyquest/tests/semantic_analysis/valid/test013.ql
// Compatible types for greater than operation 
form testForm {
	"First Question"
	someIdentifier : boolean = 10.0 > 10
}