pyquest/tests/semantic_analysis/invalid/test025.ql
// Incompatible result type for less than operation
form testForm {
	"First Question"
	someIdentifier : integer = 10.0 < 10
}